# TinyScript

./: CMakeLists.txt  main.c
spec/: grammar.ebnf
src/ast/: ast.h
src/lexer/: lexer.c  lexer.h
src/parser/: ast.c  ast.h  parser.c  parser.h
src/utils/: fs.c  fs.h  list.c  list.h  str.c  str.h
